split education from certifications

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,11 +16,14 @@
     <h2>EXECUTIVE SUMMARY</h2>
     <div id="summary"></div>
 
+    <h2>EDUCATION</h2>
+    <div id="education"></div>
+
     <h2>PROFESSIONAL EXPERIENCE</h2>
     <div id="experience"></div>
 
-    <h2>EDUCATION</h2>
-    <div id="education"></div>
+    <h2>CERTIFICATIONS</h2>
+    <div id="certifications"></div>
 
     <h2>SKILLS</h2>
     <div id="skills"></div>
